--- a/app/page.module.css
+++ b/app/page.module.css
@@ -4,15 +4,17 @@
 }
 
 .barGraph {
+  position: relative;
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   height: 476px;
-  margin-top: 70px;
+  margin-top: 166px;
 }
 
 .select {
+  position: relative;
   width: 380px;
   height: 48px;
   padding: 9px 20px;
@@ -20,6 +22,7 @@
   border-radius: 28px;
   border: 2px solid #000aff;
   font-size: 24px;
+  line-height: 30px;
 }
 
 .field {
@@ -28,4 +31,44 @@
   padding: 40px;
   border-radius: 27px;
   background: rgba(255, 0, 245, 0.05);
+}
+
+.optionsList {
+  display: none;
+  margin: 0;
+  padding: 12px 0;
+  list-style-type: none;
+  position: absolute;
+  width: 380px;
+  top: 46px;
+  right: 0;
+  border-radius: 28px;
+  border: 2px solid #000aff;
+  background: #fff;
+}
+
+.opened {
+  display: block;
+}
+
+.icon {
+  position: absolute;
+  top: 19px;
+  right: 16px;
+}
+
+.arrowUp {
+  top: 14px;
+  transform: rotate(180deg);
+}
+
+.option {
+  padding: 8px 21px;
+  font-size: 24px;
+  line-height: 30px;
+  cursor: pointer;
+}
+
+.active, .active:hover, .active:focus {
+  background-color: #e3e3e3;
 }
